--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.services.matchmaker": "1.1.2",
     "com.unity.services.multiplay": "1.1.1",
     "com.unity.services.relay": "1.0.5",
+    "com.unity.textmeshpro": "3.0.8",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
